[project]
name = "cage-4-example"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "CybORG",
    "joblib==1.2.0",
    "numpy==1.26.4",
    "ray>=2.30.0",
    "torch==2.2.0",
    "torch_geometric==2.5.0",
    "tqdm==4.65.0",
    "pyarrow>=14.0.0",
]

[tool.uv.sources]
CybORG = { path = "cage-challenge-4", editable = true }

